Ensure we reserve white spaces but also wrap the line if needed

--- a/src/autocomplete.scss
+++ b/src/autocomplete.scss
@@ -38,7 +38,7 @@ $red: #f36c60;
   }
 
   .angucomplete-title {
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
   .angucomplete-selected-row {
